[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.4.0"
borsh-derive = "1.4.0"
crosstown_bus = "1.0.1"
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
